@@ -1,7 +1,12 @@
 2008-11-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
- * src/editor.c:
+ * src/editor.c, doc/geany.txt, doc/geany.html:
    Make Ctrl-click go to matching brace if there's no current word.
+ * plugins/vcdiff.c, src/editor.c, src/plugindata.h, src/plugins.c:
+   Make Version Diff plugin set the indent type for diffs based on the 
+   current file's indent type.
+   Add editor_set_indent_type() to the API.
+   Note: uses editor.h plugindata.h include.
 
 
 2008-11-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
